<resources>
    <string name="app_name">StudyEspresso</string>
    <string name="please_input">Please input</string>
</resources>
